# pp_lab_2024_sroda

./: CMakeLists.txt
lab_01/: zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_04.cpp  zad_05.cpp  zad_06.cpp  zad_07.cpp  zad_08.cpp  zad_09.cpp  zad_10.cpp  zad_11.cpp  zad_13.cpp  zad_15.cpp
lab_02/: CMakeLists.txt  zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_05.cpp  zad_06.cpp  zad_07.cpp  zad_08.cpp  zad_09.cpp  zad_17.cpp  zad_18.cpp
lab_03/: zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_04.cpp  zad_05.cpp  zad_06.cpp  zad_07.cpp  zad_09.cpp  zad_10.cpp  zad_11.cpp  zad_12.cpp  zad_13.cpp  zad_14.cpp
lab_04/: CMakeLists.txt  zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_04.cpp  zad_05.cpp  zad_06.cpp  zad_07.cpp  zad_08.cpp  zad_09.cpp  zad_10.cpp  zad_14.cpp
lab_05/: CMakeLists.txt  zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_04.cpp  zad_05.cpp  zad_06.cpp  zad_07.cpp  zad_08.cpp  zad_09.cpp  zad_17.cpp
lab_06/: zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_04.cpp  zad_06.cpp  zad_08.cpp  zad_11.cpp  zad_12.cpp  zad_13.cpp  zad_15.cpp  zad_19.cpp
lab_07/: zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_04.cpp  zad_05.cpp  zad_06.cpp  zad_07.cpp  zad_09.cpp  zad_10.cpp  zad_14.cpp  zad_16.cpp  zad_17.cpp  zad_18.cpp  zad_20.cpp
lab_08/: zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_06.cpp  zad_09.cpp
lab_09/: zad_01.cpp  zad_03.cpp  zad_05.cpp  zad_06.cpp  zad_08.cpp  zad_09.cpp  zad_12.cpp
lab_10/: zad_01.cpp  zad_02.cpp  zad_05.cpp
lab_11/: zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_04.cpp  zad_08.cpp
lab_12/: CMakeLists.txt  zad_01.cpp  zad_02.cpp  zad_03.cpp  zad_06.cpp  zad_07.cpp
(+14 files in other folders)
